# duan.ca

./: .gitignore  404.html  CNAME  Makefile  README.md  _config.yml  about.md  api-design-guidelines.md  articles.md  config.toml  config.yaml  feed.xml  index.html  index.xml  links.md  projects.md  robots.txt  sitemap.xml  style.css  style.scss  styles.css  theme-light.css
.well-known/: brave-rewards-verification.txt
DrString/: index.html
Markra/: index.html
_feed/: articles.xml
_includes/: post-tags.html
_layouts/: default.html  link.html  page.html  post.html  tag.html  tagfeed.xml
_links/: 2017-01-16-swift-abi-in-laymans-terms.md  2017-12-11-c-and-swift.md  2018-01-01-kite-composer-a-better-way-to-animate.md  2018-01-01-lenses-prisms-swift.md  2018-03-25-notes-on-string-literals.md  2018-08-30-se0225.md
_plugins/: ext.rb
_posts/: 2012-10-31-keep-git-social.md  2015-04-18-swift-function-fun-facts.md  2015-07-04-lets-build-a-cat-in-swift-2.md  2015-07-12-swift-algebraic-data-types.md  2015-11-01-char-star-star-in-swift.md  2016-05-15-cheap-orders.md  2016-05-15-deploy-jekyll-to-github.md  2016-05-19-a-case-for-oop.md  2018-01-20-scopes.md  (+27 more)
generator/: Cargo.toml  Dockerfile  Makefile  README.md  flake.nix
generator/.cargo/: config.toml
generator/examples/sublime-syntax-dumper/: main.rs
generator/src/: article.rs  builder.rs  main.rs  markdown_post.rs  page.rs  quickie.rs  site.rs  syntax.dump  templates.rs
generator/templates/: article.html  articles.html  base.html  global-feed.xml  page.html  quickie.html  sitemap.xml  tag-feed.xml  tag.html
(+871 files in other folders)
