[package]
name = "generator"
version = "0.1.0"
authors = ["Daniel Duan <daniel@duan.ca>"]
edition = "2018"

[dependencies]
askama = "=0.9.0"
chrono = "=0.4.11"
comrak = "=0.7.0"
regex = "=1.3.7"
slug = "=0.1.4"
syntect = "=4"
walkdir = "=2.3.1"
htmlescape = "=0.3.1"

[[example]]
name = "sublime-syntax-dumper"
